feat(auth): atomically persist OAuth2 session state