@@ -1,6 +1,7 @@
 package com.jacolp.middleware.common.security.oauth2.token;
 
 import java.time.Instant;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -9,12 +10,20 @@ import java.util.Set;
 /** Strict schema-v1 Redis Hash representation for OAuth2 token state. */
 public final class OAuth2TokenStateCodec {
     private static final String VERSION = "1";
-    private static final Set<String> REFRESH_FIELDS = Set.of(
+    private static final List<String> REFRESH_FIELD_NAMES = List.of(
             "schema_version", "fingerprint", "verifier_hash", "user_id", "client_id", "granted_scopes",
             "issued_at_epoch_millis", "expires_at_epoch_millis");
-    private static final Set<String> SESSION_FIELDS = Set.of(
+    private static final List<String> SESSION_FIELD_NAMES = List.of(
             "schema_version", "user_id", "client_id", "current_access_jti", "access_expires_at_epoch_millis",
             "current_refresh_fingerprint", "refresh_expires_at_epoch_millis");
+    private static final Set<String> REFRESH_FIELDS = Set.copyOf(REFRESH_FIELD_NAMES);
+    private static final Set<String> SESSION_FIELDS = Set.copyOf(SESSION_FIELD_NAMES);
+
+    /** Canonical fixed hash-field order for Redis Lua arguments. */
+    public List<String> refreshFieldNames() { return REFRESH_FIELD_NAMES; }
+
+    /** Canonical fixed hash-field order for Redis Lua arguments. */
+    public List<String> sessionFieldNames() { return SESSION_FIELD_NAMES; }
 
     public Map<String, String> encode(RefreshTokenState state) {
         List<String> scopes = state.grantedScopes();
@@ -25,7 +34,7 @@ public final class OAuth2TokenStateCodec {
         values.put("schema_version", VERSION); values.put("fingerprint", state.fingerprint()); values.put("verifier_hash", state.verifierHash());
         values.put("user_id", Long.toString(state.userId())); values.put("client_id", state.clientId()); values.put("granted_scopes", String.join(" ", scopes));
         values.put("issued_at_epoch_millis", Long.toString(state.issuedAt().toEpochMilli())); values.put("expires_at_epoch_millis", Long.toString(state.expiresAt().toEpochMilli()));
-        return Map.copyOf(values);
+        return Collections.unmodifiableMap(values);
     }
 
     public Map<String, String> encode(OAuth2SessionState state) {
@@ -33,7 +42,7 @@ public final class OAuth2TokenStateCodec {
         values.put("schema_version", VERSION); values.put("user_id", Long.toString(state.userId())); values.put("client_id", state.clientId());
         values.put("current_access_jti", state.currentAccessJti()); values.put("access_expires_at_epoch_millis", Long.toString(state.accessExpiresAt().toEpochMilli()));
         values.put("current_refresh_fingerprint", state.currentRefreshFingerprint()); values.put("refresh_expires_at_epoch_millis", Long.toString(state.refreshExpiresAt().toEpochMilli()));
-        return Map.copyOf(values);
+        return Collections.unmodifiableMap(values);
     }
 
     public RefreshTokenState decodeRefresh(Map<String, String> values) {
